# aip_project_translator

./: README.md
docs/: Doxyfile
docs/html/: index.html
docs/html/html/: annotated.html  annotated_dup.js  classes.html  dir_0dd3d66cc5357713e658bfb837e55528.html  dir_0dd3d66cc5357713e658bfb837e55528.js  dir_566cfeb9777e3d38aa3d1d122787feb0.html  dir_566cfeb9777e3d38aa3d1d122787feb0.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6c13dd3510a7116867ecc4da72f8f981.html  dir_6c13dd3510a7116867ecc4da72f8f981.js  dir_7ff9e491bb73bdeb52a38716e0fb8007.html  dir_7ff9e491bb73bdeb52a38716e0fb8007.js  dir_8e048bfcd30ad7f83e7acaac9f66a43f.html  dir_8e048bfcd30ad7f83e7acaac9f66a43f.js  dir_9894dfcbf3da6bd28700188798e9761b.html  dir_9894dfcbf3da6bd28700188798e9761b.js  dir_99d0482cf009f9d97a0877749b817f19.html  dir_99d0482cf009f9d97a0877749b817f19.js  dir_bc81c53f41cd7dae43a1a15a859a0904.html  dir_bc81c53f41cd7dae43a1a15a859a0904.js  dir_c079889d6749df1b0032669db907eeee.html  dir_c079889d6749df1b0032669db907eeee.js  dir_cbc38cd1731af92aa1b3a6bf5d31fa9b.html  dir_cbc38cd1731af92aa1b3a6bf5d31fa9b.js  dir_d91cd34adc263da02a10612b8078496f.html  dir_d91cd34adc263da02a10612b8078496f.js  dir_f2e26a16b2cc77b57a8a23b2e82761a0.html  dir_f2e26a16b2cc77b57a8a23b2e82761a0.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  (+32 more)
docs/html/html/d0/dc6/: c__project__autogen_2mocs__compilation_8cpp.html  c__project__autogen_2mocs__compilation_8cpp_source.html
docs/html/html/d1/d16/: mainwindow_8ui.html  mainwindow_8ui_source.html
docs/html/html/d2/d64/: apple-sdk_8cpp.html  apple-sdk_8cpp_source.html
docs/html/html/d2/d82/: gui__tests__autogen_2moc__predefs_8h.html  gui__tests__autogen_2moc__predefs_8h.js  gui__tests__autogen_2moc__predefs_8h_source.html
docs/html/html/d5/d3f/: classUi__MainWindow.html  classUi__MainWindow.js
docs/html/html/d6/d1a/: classMainWindow.html  classMainWindow.js
docs/html/html/d6/d83/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp.js  CMakeCXXCompilerId_8cpp_source.html
docs/html/html/d7/dde/: gui__tests__autogen_2mocs__compilation_8cpp.html  gui__tests__autogen_2mocs__compilation_8cpp_source.html
docs/html/html/d7/df4/: c__project__autogen_2EWIEGA46WW_2moc__mainwindow_8cpp.html  c__project__autogen_2EWIEGA46WW_2moc__mainwindow_8cpp.js  c__project__autogen_2EWIEGA46WW_2moc__mainwindow_8cpp_source.html
docs/html/html/d8/d5d/: structqt__meta__stringdata__MainWindow__t-members.html
docs/html/html/d8/d7c/: classUi_1_1MainWindow-members.html
docs/html/html/d8/dd3/: mainwindow__test_8cpp.html  mainwindow__test_8cpp.js  mainwindow__test_8cpp_source.html
docs/html/html/d8/dd9/: mainwindow_8cpp.html  mainwindow_8cpp_source.html
docs/html/html/d9/d53/: mainwindow_8h.html  mainwindow_8h.js  mainwindow_8h_source.html
docs/html/html/d9/dbd/: classUi_1_1MainWindow.html
docs/html/html/d9/dbe/: classMainWindow-members.html
docs/html/html/db/d3c/: namespaceUi.html  namespaceUi.js
docs/html/html/db/d41/: c__project__autogen_2moc__predefs_8h.html  c__project__autogen_2moc__predefs_8h.js  c__project__autogen_2moc__predefs_8h_source.html
docs/html/html/db/d49/: structqt__meta__stringdata__MainWindow__t.html  structqt__meta__stringdata__MainWindow__t.js
docs/html/html/db/db0/: gui__tests__autogen_2include_2ui__mainwindow_8h.html  gui__tests__autogen_2include_2ui__mainwindow_8h.js  gui__tests__autogen_2include_2ui__mainwindow_8h_source.html
docs/html/html/dd/dcd/: c__project__autogen_2include_2ui__mainwindow_8h.html  c__project__autogen_2include_2ui__mainwindow_8h.js  c__project__autogen_2include_2ui__mainwindow_8h_source.html
docs/html/html/de/d12/: classUi__MainWindow-members.html
docs/html/html/de/d20/: gui__tests__autogen_2EWIEGA46WW_2moc__mainwindow_8cpp.html  gui__tests__autogen_2EWIEGA46WW_2moc__mainwindow_8cpp.js  gui__tests__autogen_2EWIEGA46WW_2moc__mainwindow_8cpp_source.html
docs/html/html/df/d0a/: main_8cpp.html  main_8cpp_source.html
docs/html/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_2.js  defines_3.js  defines_4.js  defines_7.js  defines_8.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  (+3 more)
docs/html/latex/: annotated.tex  dir_0dd3d66cc5357713e658bfb837e55528.tex  dir_566cfeb9777e3d38aa3d1d122787feb0.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6c13dd3510a7116867ecc4da72f8f981.tex  dir_7ff9e491bb73bdeb52a38716e0fb8007.tex  dir_8e048bfcd30ad7f83e7acaac9f66a43f.tex  dir_9894dfcbf3da6bd28700188798e9761b.tex  dir_99d0482cf009f9d97a0877749b817f19.tex  dir_bc81c53f41cd7dae43a1a15a859a0904.tex  dir_c079889d6749df1b0032669db907eeee.tex  dir_cbc38cd1731af92aa1b3a6bf5d31fa9b.tex  dir_d91cd34adc263da02a10612b8078496f.tex  dir_f2e26a16b2cc77b57a8a23b2e82761a0.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
src/: new.txt
src/core/: CMakeLists.txt
src/core/opus-mt-ru-en/: vocab.json
src/core/src/: CMakeLists.txt  main.cpp
src/core/src/tokenizer/: tokenizer.cpp  tokenizer.hpp
src/core/src/translator/: translator.cpp  traslator.hpp
src/core/tests/: CMakeLists.txt  test_tokenizer.cpp  test_translator.cpp  tokenizer_test.cpp  translator_test.cpp
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  temp.pro
src/gui/tests/: mainwindow_test.cpp
src/requests/: api_keys.json.example
src/requests/include/: http_client.hpp  online_translators.hpp  utils.hpp
src/requests/src/: http_client.cpp  online_translators.cpp  utils.cpp
src/requests/tests/: test_http_client.cpp  test_online_translators.cpp  test_utils.cpp
(+35 files in other folders)
